--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorTb"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/loadMenu"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Load Menu"
+        android:src="@drawable/b"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <Button
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/mainAmountQ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How much money would you like to spend?"
+        tools:layout_editor_absoluteX="82dp"
+        tools:layout_editor_absoluteY="278dp" />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
