--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,15 @@
 
     <ImageView
         android:id="@+id/logoImage"
-        android:transitionName="tacoBellLogo"
-        android:scaleType="centerCrop"
         android:layout_width="355dp"
         android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:transitionName="tacoBellLogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38"
         app:srcCompat="@drawable/taco_bell_logo" />
 
     <Button
