--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -7,53 +7,59 @@
     android:layout_height="match_parent">
     <!--android:background="@color/colorTb">-->
 
-    <ImageView
-        android:id="@+id/logoImage"
-        android:layout_width="171dp"
-        android:layout_height="109dp"
-        android:scaleType="centerCrop"
-        android:transitionName="tacoBellLogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/taco_bell_logo" />
+    <LinearLayout
+        android:id="@+id/everythingLinear"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TableLayout
-        android:id="@+id/orderTable"
-        android:layout_width="409dp"
-        android:layout_height="620dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoImage"
-        app:layout_constraintVertical_bias="0.59000003">
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="160dp"
+            android:layout_height="118dp"
+            android:layout_gravity="center_horizontal"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            android:transitionName="tacoBellLogo"
+            app:srcCompat="@drawable/taco_bell_logo" />
 
-        <TableRow
+        <LinearLayout
+            android:id="@+id/headerLinear"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="63dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tableHeaderItem"
-                android:layout_width="236dp"
+            <LinearLayout
+                android:id="@+id/innerHeaderLinear"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/lato"
-                android:gravity="center_horizontal"
-                android:text="Item Name"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tableHeaderPrice"
-                android:layout_width="227dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/lato"
-                android:text="Price"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-        </TableRow>
-    </TableLayout>
+                <TextView
+                    android:id="@+id/itemHeader"
+                    android:layout_width="264dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/lato"
+                    android:gravity="center"
+                    android:text="Item Name"
+                    android:textAllCaps="true"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/priceHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/lato"
+                    android:gravity="center"
+                    android:text="Price"
+                    android:textAllCaps="true"
+                    android:textSize="24sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
