--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -26,41 +26,36 @@
             app:srcCompat="@drawable/taco_bell_logo" />
 
         <LinearLayout
-            android:id="@+id/headerLinear"
+            android:id="@+id/orderLayout"
             android:layout_width="match_parent"
-            android:layout_height="63dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-
             <LinearLayout
-                android:id="@+id/innerHeaderLinear"
+                android:id="@+id/headerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/itemHeader"
-                    android:layout_width="221dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:fontFamily="@font/lato"
-                    android:gravity="center"
-                    android:text="Item Name"
+                    android:text="Item"
                     android:textAllCaps="true"
-                    android:textSize="24sp" />
-
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/priceHeader"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/lato"
-                    android:gravity="center"
                     android:text="Price"
                     android:textAllCaps="true"
-                    android:textSize="24sp" />
-
+                    android:textSize="30sp" />
             </LinearLayout>
         </LinearLayout>
 
