--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/logoImage"
-            android:layout_width="160dp"
-            android:layout_height="118dp"
+            android:layout_width="186dp"
+            android:layout_height="123dp"
             android:layout_gravity="center_horizontal"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
@@ -25,38 +25,78 @@
             android:transitionName="tacoBellLogo"
             app:srcCompat="@drawable/taco_bell_logo" />
 
-        <LinearLayout
-            android:id="@+id/orderLayout"
+        <ScrollView
+            android:id="@+id/orderScroll"
+            style="@android:style/Widget.DeviceDefault.Light.ScrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="488dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:fadeScrollbars="true">
 
             <LinearLayout
-                android:id="@+id/headerLayout"
+                android:id="@+id/orderLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/itemHeader"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/headerLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/lato"
-                    android:text="Item"
-                    android:textAllCaps="true"
-                    android:textSize="30sp" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/priceHeader"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/lato"
-                    android:text="Price"
-                    android:textAllCaps="true"
-                    android:textSize="30sp" />
+                    <TextView
+                        android:id="@+id/itemHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/lato"
+                        android:text="Item"
+                        android:textAllCaps="true"
+                        android:textSize="30sp" />
+
+                    <TextView
+                        android:id="@+id/priceHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:fontFamily="@font/lato"
+                        android:text="Price"
+                        android:textAllCaps="true"
+                        android:textSize="30sp" />
+
+                </LinearLayout>
+
             </LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:id="@+id/totalLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
+
+            <TextView
+                android:id="@+id/totalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/lato"
+                android:text="Total"
+                android:textAllCaps="true"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/totalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="@font/lato"
+                android:textSize="24sp" />
         </LinearLayout>
 
     </LinearLayout>
