--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -25,48 +25,50 @@
             android:transitionName="tacoBellLogo"
             app:srcCompat="@drawable/taco_bell_logo" />
 
+        <LinearLayout
+            android:id="@+id/headerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
+
+            <TextView
+                android:id="@+id/itemHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/lato"
+                android:text="Item"
+                android:textAllCaps="true"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/priceHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="@font/lato"
+                android:text="Price"
+                android:textAllCaps="true"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
         <ScrollView
             android:id="@+id/orderScroll"
             style="@android:style/Widget.DeviceDefault.Light.ScrollView"
             android:layout_width="match_parent"
-            android:layout_height="488dp"
+            android:layout_height="429dp"
+            android:fadeScrollbars="true"
             android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:fadeScrollbars="true">
+            android:paddingRight="30dp">
 
             <LinearLayout
                 android:id="@+id/orderLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/headerLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/itemHeader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/lato"
-                        android:text="Item"
-                        android:textAllCaps="true"
-                        android:textSize="30sp" />
-
-                    <TextView
-                        android:id="@+id/priceHeader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:fontFamily="@font/lato"
-                        android:text="Price"
-                        android:textAllCaps="true"
-                        android:textSize="30sp" />
-
-                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
@@ -76,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:paddingTop="5dp"
+            android:paddingTop="15dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp">
 
