--- a/app/src/main/res/layout/activity_questions_pages.xml
+++ b/app/src/main/res/layout/activity_questions_pages.xml
@@ -73,8 +73,8 @@
 
     <RadioGroup
         android:id="@+id/drinksRadioGroup"
-        android:layout_width="139dp"
-        android:layout_height="82dp"
+        android:layout_width="175dp"
+        android:layout_height="139dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/optionsInput"
         app:layout_constraintEnd_toEndOf="@+id/optionsInput"
@@ -83,9 +83,11 @@
 
         <RadioButton
             android:id="@+id/yesDrink"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
+            android:layout_weight="0"
             android:fontFamily="@font/lato"
+            android:paddingRight="5dp"
             android:text="Yes"
             android:textSize="24sp" />
 
@@ -93,8 +95,9 @@
             android:id="@+id/noDrink"
             android:layout_width="147dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:fontFamily="@font/lato"
+            android:paddingLeft="10dp"
             android:text="No"
             android:textSize="24sp" />
     </RadioGroup>
