--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -9,9 +9,12 @@
 
     <LinearLayout
         android:id="@+id/everythingLinear"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
@@ -78,7 +81,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:paddingTop="15dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp">
 
