--- a/app/src/main/res/layout/activity_questions_pages.xml
+++ b/app/src/main/res/layout/activity_questions_pages.xml
@@ -25,7 +25,7 @@
         android:ems="10"
         android:fontFamily="@font/lato"
         android:gravity="center_horizontal"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
