--- a/app/src/main/res/layout/activity_questions_pages.xml
+++ b/app/src/main/res/layout/activity_questions_pages.xml
@@ -36,7 +36,7 @@
     <TextView
         android:id="@+id/whatToInput"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_centerVertical="true"
         android:fontFamily="@font/lato"
         android:textSize="18sp"
@@ -56,9 +56,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drinksRadioGroup"
-        app:layout_constraintVertical_bias="0.756" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/badInputMessage"
@@ -73,33 +71,40 @@
 
     <RadioGroup
         android:id="@+id/drinksRadioGroup"
-        android:layout_width="175dp"
-        android:layout_height="139dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/optionsInput"
-        app:layout_constraintEnd_toEndOf="@+id/optionsInput"
-        app:layout_constraintStart_toStartOf="@+id/optionsInput"
-        app:layout_constraintTop_toTopOf="@+id/optionsInput">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/nextButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoImage"
+        app:layout_constraintVertical_bias="0.74">
 
         <RadioButton
-            android:id="@+id/yesDrink"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0"
+            android:id="@+id/yesButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
-            android:paddingRight="5dp"
-            android:text="Yes"
-            android:textSize="24sp" />
+            android:text="RadioButton"
+            android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/noDrink"
-            android:layout_width="147dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0"
+            android:id="@+id/noButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
-            android:paddingLeft="10dp"
-            android:text="No"
-            android:textSize="24sp" />
+            android:text="RadioButton"
+            android:textSize="18sp" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/dollarSign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/lato"
+        android:text="$"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/optionsInput"
+        app:layout_constraintEnd_toStartOf="@+id/drinksRadioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
