--- a/app/src/main/res/layout/activity_generated_order.xml
+++ b/app/src/main/res/layout/activity_generated_order.xml
@@ -17,16 +17,31 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <ImageView
-            android:id="@+id/logoImage"
-            android:layout_width="186dp"
-            android:layout_height="123dp"
-            android:layout_gravity="center_horizontal"
-            android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:transitionName="tacoBellLogo"
-            app:srcCompat="@drawable/taco_bell_logo" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/logoImage"
+                android:layout_width="198dp"
+                android:layout_height="123dp"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:cropToPadding="true"
+                android:scaleType="centerCrop"
+                android:transitionName="tacoBellLogo"
+                app:srcCompat="@drawable/taco_bell_logo" />
+
+            <Button
+                android:id="@+id/resetButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:text="Remake Order"
+                android:textSize="18sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/headerLayout"
